(Products-FrontStore): Integrated with common proto files.
